--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.18.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "node-sass": "4.14",
@@ -22,6 +23,7 @@
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "typescript": "^4.5.4",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
