--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.18.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
+    "less-loader": "^10.2.0",
     "node-sass": "4.14",
     "prop-types": "^15.7.2",
     "qs": "^6.10.2",
