--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "antd": "^4.18.2",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
-    "less-loader": "^10.2.0",
     "node-sass": "4.14",
     "prop-types": "^15.7.2",
     "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
