--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "Frontend_diploma",
+  "name": "frontend_diploma",
   "version": "0.1.0",
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@reduxjs/toolkit": "^1.7.1",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "antd": "^4.18.2",
+    "@reduxjs/toolkit": "^1.8.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.13",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
+    "antd": "^4.19.1",
+    "axios": "^0.26.1",
     "classnames": "^2.3.1",
-    "date-fns": "^2.28.0",
-    "node-sass": "4.14",
-    "prop-types": "^15.7.2",
-    "qs": "^6.10.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-router-dom": "6",
+    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "typescript": "^4.5.4",
-    "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "redux-saga": "^1.1.3",
+    "sass": "^1.49.9",
+    "typescript": "^4.4.2",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
