--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/uuid": "^8.3.4",
     "antd": "^4.19.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
