--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.19.1",
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-input-mask": "^2.0.4",
