--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 GENERATE_SOURCEMAP=false
+
+REACT_APP_BASE_URL=https://fe-diplom.herokuapp.com/
+
+REACT_APP_NEW_BASE_URL=http://80.87.192.113:3001/
