--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-saga": "^1.1.3",
     "sass": "^1.49.9",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
